# dirigo-thorlabs-detectors

./: LICENSE  README.md  pyproject.toml
dirigo_thorlabs_detectors/: __init__.py  dirigo_thorlabs_detectors.py
